--- a/config.yml
+++ b/config.yml
@@ -14,7 +14,7 @@ steps:
       I denna modul finns information om kursens förkunskaper, upplägg och
       tekniska krav för att komma igång
     video: https://player.vimeo.com/video/653010481?h=f93203a450
-    event: issues.assigned
+    event: issues.closed
     link: '{{ repoUrl }}/issues/1'
     actions:
       - type: respond
@@ -22,71 +22,71 @@ steps:
         issue: 1
       - type: createIssue
         title: Modul 2 - Komponenter
-        body: module-2-components.md
+        body: module-2/module-2-components.md
   - title: Modul 2 - Komponenter
     description: >-
       I denna modul utreder vi vad ett ramverk är samt hur man tänker i
       komponenter.
-    event: issues.assigned
+    event: issues.closed
     link: '{{ repoUrl }}/issues/2'
     actions:
       - type: respond
-        with: module-2-components-completed.md
+        with: module-2/module-2-components-completed.md
         issue: 2
       - type: createIssue
         title: Modul 3 - Interaktivitet
-        body: module-3-interactivity.md
+        body: module-3/module-3-interactivity.md
   - title: Modul 3 - Interaktivitet
     description: I denna modul tittar vi på hur vi får in interaktivitet i vår React app samt dynamiskt renderar innehåll.
-    event: issues.assigned
+    event: issues.closed
     link: '{{ repoUrl }}/issues/3'
     actions:
       - type: respond
-        with: module-3-interactivity-completed.md
+        with: module-3/module-3-interactivity-completed.md
         issue: 3
       - type: createIssue
         title: Modul 4 - State
-        body: module-4-state.md
+        body: module-4/module-4-state.md
   - title: Modul 4 - State
     description: I denna modul kollar vi på vad ett state är och hur vi kan använda det i vår React app.
-    event: issues.assigned
+    event: issues.closed
     link: '{{ repoUrl }}/issues/4'
     actions:
       - type: respond
-        with: module-4-state-completed.md
+        with: module-4/module-4-state-completed.md
         issue: 4
       - type: createIssue
         title: Modul 5 - React Router
-        body: module-5-react-router.md
+        body: module-5/module-5-react-router.md
   - title: Modul 5 - React Router
     description: I denna modul kikar vi på hur vi kan bygga en Single Page Application (SPA) med React router.
-    event: issues.assigned
+    event: issues.closed
     link: '{{ repoUrl }}/issues/5'
     actions:
       - type: respond
-        with: module-5-react-router-completed.md
+        with: module-5/module-5-react-router-completed.md
         issue: 5
       - type: createIssue
         title: Modul 6 - Redux
-        body: module-6-redux.md
+        body: module-6/module-6-redux.md
   - title: Modul 6 - Redux
     description: I denna modul utreder vi fördelar med ett state management system och kollar in vad Redux är och hur det fungerar tillsammans med React.
-    event: issues.assigned
+    event: issues.closed
     link: '{{ repoUrl }}/issues/6'
     actions:
       - type: respond
-        with: module-6-redux-completed.md
+        with: module-6/module-6-redux-completed.md
         issue: 6
       - type: createIssue
         title: Modul 7 - Slutexamination
-        body: module-7-final-examination.md
+        body: module-7/module-7-final-examination.md
   - title: Modul 7 - Slutexamination
     description: Kursens slutexamination och bedömningsunderlag.
-    event: issues.assigned
+    event: issues.closed
     link: '{{ repoUrl }}/issues/7'
     actions:
       - type: respond
-        with: module-7-final-examination-completed.md
+        with: module-7/module-7-final-examination-completed.md
         issue: 7
       - type: closeIssue
         issue: 7
