--- a/config.yml
+++ b/config.yml
@@ -10,14 +10,12 @@ before:
     owner: "%payload.repository.owner.login%"
     repo: "%payload.repository.name%"
     title: Modul 1
-  - type: createIssue
+  - type: octokit
+    method: issues.create
+    owner: "%payload.repository.owner.login%"
+    repo: "%payload.repository.name%"
     title: Modul 1 - Hello World
     body: module-1/module-1-hello-world.md
-  - type: octokit
-    method: issues.update
-    repo: "%payload.repository.name%"
-    owner: "%payload.repository.owner.login%"
-    issue_number: 1
     milestone: 1
 steps:
   - title: Modul 1 - Hello World
