--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ before:
     owner: "%payload.repository.owner.login%"
     repo: "%payload.repository.name%"
     title: Modul 1 - Hello World
-    body: module-1/module-1-hello-world.md
+    body: "module-1/module-1-hello-world.md"
     milestone: 1
 steps:
   - title: Modul 1 - Hello World
