--- a/config.yml
+++ b/config.yml
@@ -40,9 +40,14 @@ before:
     owner: "%payload.repository.owner.login%"
     repo: "%payload.repository.name%"
     title: Modul 7
-  - type: createIssue
-    title: Modul 1 - Hello World
-    body: module-1/module-1-hello-world.md
+  - type: getFileContents
+    filename: module-1/module-1-hello-world.md
+  - type: octokit
+    method: issues.create
+    owner: "%payload.repository.owner.login%"
+    repo: "%payload.repository.name%"
+    body: "{{ result }}"
+    milestone: 1
 steps:
   - title: Modul 1 - Hello World
     description: >-
