--- a/config.yml
+++ b/config.yml
@@ -42,12 +42,17 @@ before:
     title: Modul 7
   - type: getFileContents
     filename: module-1/module-1-hello-world.md
+    action_id: module_one
   - type: octokit
     method: issues.create
     owner: "%payload.repository.owner.login%"
     repo: "%payload.repository.name%"
-    body: "{{ result }}"
+    title: Modul 1 - Hello World
+    body: "{{ actions.module_one }}"
     milestone: 1
+  # - type: createIssue
+  #   title: Modul 1 - Hello World
+  #   body: module-1/module-1-hello-world.md
 steps:
   - title: Modul 1 - Hello World
     description: >-
